--- a/HelpApp/HelpApp.Application/HelpApp.Application.csproj
+++ b/HelpApp/HelpApp.Application/HelpApp.Application.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HelpApp.Domain\HelpApp.Domain.csproj" />
+    <ProjectReference Include="..\HelpApp.Infra.Data\HelpApp.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
